--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      window.addEventListener("error", (event) => {
+        console.error("Global error:", event.error);
+      });
+    </script>
   </body>
-</html> 
+</html>
