✨ feat(index.html): change error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/main.ts"></script>
     <script>
       window.addEventListener("error", (event) => {
-        console.error("Global error:", event.error);
+        console.error("Global error:::", event.error);
       });
     </script>
   </body>
